@@ -7,7 +7,11 @@ from trytond.pool import Pool
 def register():
     # Prevent to import backend when importing scripts
     from . import currency
+    from . import ir
     Pool.register(
         currency.Currency,
         currency.CurrencyRate,
+        currency.Cron,
+        currency.Cron_Currency,
+        ir.Cron,
         module='currency', type_='model')
