@@ -35,3 +35,29 @@ the 15th of January you just need to set the rate on the USD currency to
    and 14th of January the last available rate will be used.
    Here this rate would be ``1.1222`` as this was the rate set for the 1st of
    January.
+
+.. _Scheduling rate updates:
+
+Scheduling rate updates
+=======================
+
+You may want to define some `Scheduled Rate Updates <model-currency.cron>` to
+keep the `Exchange Rates <model-currency.currency.rate>` up to date.
+When doing this you have to pick a source, the base `currency
+<model-currency.currency>` and a frequency.
+Then for each required date since the last update, a rate of ``1.0`` will be
+set for the base currency and the corresponding rate will be set for each of
+the selected currencies.
+
+.. warning::
+
+   It is strongly advised to use the same base currency for all *Scheduled Rate
+   Updates*.
+
+.. note::
+
+   The currency module only supports the rates provided by the `European
+   Central Bank`_, but third party modules can add additional sources for
+   exchange rates.
+
+.. _European Central Bank: https://www.ecb.europa.eu/stats/policy_and_exchange_rates/euro_reference_exchange_rates/html/index.en.html
