@@ -1,0 +1,23 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form>
+    <label name="source"/>
+    <field name="source"/>
+    <label name="frequency"/>
+    <group id="frequency" col="-1">
+        <field name="frequency"/>
+        <label name="weekday"/>
+        <field name="weekday"/>
+        <label name="day"/>
+        <field name="day"/>
+    </group>
+    <label name="currency"/>
+    <field name="currency"/>
+    <label name="last_update"/>
+    <group id="run">
+        <field name="last_update"/>
+        <button name="run"/>
+    </group>
+    <field name="currencies" colspan="4"/>
+</form>
