@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tree>
+    <field name="source" expand="1"/>
+    <field name="frequency"/>
+    <field name="currency"/>
+    <field name="last_update"/>
+</tree>
